--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "aurelia-skeleton-plugin",
-  "version": "1.0.1",
-  "description": "A starter kit for building an Aurelia plugin.",
+  "name": "aurelia-flatpickr",
+  "version": "1.0.0",
+  "description": "An aurelia flatpickr component.",
   "keywords": [
     "aurelia",
-    "plugin",
-    "skeleton"
+    "flatpickr"
   ],
-  "homepage": "http://aurelia.io",
-  "bugs": {
-    "url": "https://github.com/aurelia/skeleton-plugin/issues"
-  },
   "license": "CC0-1.0",
-  "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
+  "author": "Ishai Strauss",
   "main": "dist/commonjs/index.js",
   "repository": {
     "type": "git",
-    "url": "http://github.com/aurelia/skeleton-plugin"
+    "url": "http://github.com/istrau2/aurelia-flatpickr"
   },
   "devDependencies": {
     "aurelia-tools": "^0.2.4",
