--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-flatpickr",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "An aurelia flatpickr component.",
   "keywords": [
     "aurelia",
@@ -14,6 +14,7 @@
     "url": "http://github.com/istrau2/aurelia-flatpickr"
   },
   "devDependencies": {
+    "aurelia-polyfills": "^1.1.1",
     "aurelia-tools": "^0.2.4",
     "babel-eslint": "^6.1.2",
     "babel-plugin-syntax-flow": "^6.8.0",
@@ -47,17 +48,14 @@
     "vinyl-paths": "^2.1.0",
     "yargs": "^4.8.1"
   },
-  "jspm": {
-    "registry": "npm",
-    "jspmPackage": true,
-    "main": "index",
-    "format": "amd",
-    "directories": {
-      "dist": "dist/amd"
-    },
-    "peerDependencies": {},
-    "devDependencies": {
-      "aurelia-polyfills": "^1.0.0-beta.1.1.0"
+  "dependencies": {
+    "flatpickr": "^2.3.7"
+  },
+  "aurelia": {
+    "build": {
+      "resources": [
+        "aurelia-flatpickr/aurelia-flatpickr"
+      ]
     }
   }
 }
